@@ -92,10 +92,10 @@ public final class SelfDependencyPatcher {
             } else {
                 defaultRepository = Repository.MAVEN_CENTRAL;
             }
-            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR));
+            repositories = List.of(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR);
         } else {
             defaultRepository = new Repository(String.format(i18n("repositories.custom"), customUrl), customUrl);
-            repositories = Collections.unmodifiableList(Arrays.asList(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR, defaultRepository));
+            repositories = List.of(Repository.MAVEN_CENTRAL, Repository.TENCENTCLOUD_MIRROR, defaultRepository);
         }
     }
 
@@ -112,7 +112,7 @@ public final class SelfDependencyPatcher {
                 if (platform == null)
                     return null;
 
-                if (JavaRuntime.CURRENT_VERSION >= 22) {
+                if (JavaRuntime.CURRENT_VERSION >= 23) {
                     List<DependencyDescriptor> modernDependencies = platform.get("modern");
                     if (modernDependencies != null)
                         return modernDependencies;
@@ -143,17 +143,9 @@ public final class SelfDependencyPatcher {
         }
     }
 
-    private static final class Repository {
+    private record Repository(String name, String url) {
         public static final Repository MAVEN_CENTRAL = new Repository(i18n("repositories.maven_central"), "https://repo1.maven.org/maven2");
         public static final Repository TENCENTCLOUD_MIRROR = new Repository(i18n("repositories.tencentcloud_mirror"), "https://mirrors.cloud.tencent.com/nexus/repository/maven-public");
-
-        private final String name;
-        private final String url;
-
-        Repository(String name, String url) {
-            this.name = name;
-            this.url = url;
-        }
 
         public String resolveDependencyURL(DependencyDescriptor descriptor) {
             return String.format("%s/%s/%s/%s/%s",
@@ -387,7 +379,7 @@ public final class SelfDependencyPatcher {
             }
         }
 
-        String sha1 = Hex.encodeHex(digest.digest());
+        String sha1 = HexFormat.of().formatHex(digest.digest());
         if (!dependency.sha1().equalsIgnoreCase(sha1))
             throw new ChecksumMismatchException("SHA-1", dependency.sha1(), sha1);
     }
